vlib/v/checker/tests/enum-error-module.out
./vlib/v/checker/tests/enum-error-module.vv:6:18: error: unknown enum `missing_enum.ColoList` (type_idx=0)
    4 | fn main(){
    5 |     mut c := me.Color{
    6 |         color:me.ColoList.black
      |                  ~~~~~~~~~~~~~~
    7 |     }
    8 |     println(c)
